SEO fixes, Still stuck on sitemap

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -15,7 +15,7 @@
     a {
       color: white;
       text-decoration: none;
-      curosr: pointer;
+      cursor: pointer;
       transition: color 0.2s ease-in-out;
 
       &:hover {
