--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,7 +3,7 @@
   color: white;
   width: 100%;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 
   nav {
     width: 100%;
@@ -82,7 +82,7 @@
       /* bottom: 0; */
       height: 100vh;
       box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.4);
-      z-index: 999;
+      z-index: 9999;
       padding-top: 100px;
       text-align: center;
       align-items: stretch;
